# api_autotest

./: pyproject.toml
helpers/: data.py  generate.py  validate.py
tests/: conftest.py  test_login.py  test_reqres_register.py  test_reqres_users.py
