[project]
name = "api-autotest"
version = "0.1.0"
description = ""
authors = [
    {name = "artur.balsis",email = "artur.balsis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "jsonschema (==4.23.0)",
    "pytest (==8.3.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
